<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".MainActivity">

    <nl.dionsegijn.konfetti.KonfettiView
            android:id="@+id/konfetti"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    <View
            android:id="@+id/led_1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_led"
            android:layout_margin="20dp"
            android:elevation="5dp"/>

    <View
            android:id="@+id/led_2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_led"
            android:layout_margin="20dp"
            android:elevation="5dp"/>

    <View
            android:id="@+id/led_3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_led"
            android:layout_margin="20dp"
            android:elevation="5dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:background="@color/light_grey"
        android:elevation="5dp">

        <TextView
            android:id="@+id/answer"
            style="@style/TextAppearance"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="answer"/>

        <TextView
            android:id="@+id/guess"
            style="@style/TextAppearance"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:text="guess"/>

    </FrameLayout>


    <Button
            android:id="@+id/button_a"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:text="A"/>

    <Button
            android:id="@+id/button_b"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:text="B"/>

    <Button
            android:id="@+id/button_c"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:text="C"/>

</RelativeLayout>